[tool.poetry]
name = "generation-report-stat-nodes"
version = "0.1.0"
description = ""
authors = ["Sergey199408081 <aleksey.serzh@mail.ru>"]

[tool.poetry.dependencies]
python = "3.7.5"
requests-futures = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
